Import of AMONTERO/Text-ToSentences-0.9.1 from CPAN.
gitpan-cpan-distribution: Text-ToSentences
gitpan-cpan-version:      0.9.1
gitpan-cpan-path:         AMONTERO/Text-ToSentences-0.9.1.tar.gz
gitpan-cpan-author:       AMONTERO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -7,3 +7,6 @@ Revision history for Perl extension Text::ToSentences.
 0.9   Mon Dec 28 19:30:02 2009
 	- first public version
 
+0.9.1 Wed Dec 30 22:04:02 2009
+        - fixed typo in documentation (Thanks to Andrew Shitov)
+
